--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,10 @@
 [build]
   functions = "./lambda"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "no-referrer"
+    X-Content-Type-Options = "nosniff"
