--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "dayjs": "^1.7.7",
     "netlify-lambda": "^1.0.2",
     "node-fetch": "^2.2.1",
     "register-service-worker": "^1.0.0",
