--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,7 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "no-referrer"
     X-Content-Type-Options = "nosniff"
+    Content-Security-Policy = '''
+      default-src 'self' https:;
+      connect-src 'none';
+      object-src 'none' '''
