--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,6 @@
     Referrer-Policy = "no-referrer"
     X-Content-Type-Options = "nosniff"
     Content-Security-Policy = '''
-      default-src 'self' https:;
+      default-src 'self';
       connect-src 'none';
       object-src 'none' '''
