--- a/netlify.toml
+++ b/netlify.toml
@@ -12,5 +12,5 @@
     X-Content-Type-Options = "nosniff"
     Content-Security-Policy = '''
       default-src 'self';
-      connect-src 'none';
+      connect-src 'self';
       object-src 'none' '''
