--- a/netlify.toml
+++ b/netlify.toml
@@ -12,4 +12,5 @@
     X-Content-Type-Options = "nosniff"
     Content-Security-Policy = '''
       default-src 'self';
+      script-src 'https://storage.googleapis.com/workbox-cdn/*';
       object-src 'none' '''
