Fix missing encoding dependency

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "dayjs": "^1.7.7",
-    "netlify-lambda": "^1.0.2",
+    "encoding": "^0.1.12",
+    "netlify-lambda": "^1.4.7",
     "node-fetch": "^2.2.1",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
@@ -23,8 +24,8 @@
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-plugin-pwa": "^3.0.1",
-    "@vue/cli-plugin-unit-jest": "^3.0.1",
-    "@vue/cli-service": "^3.0.1",
+    "@vue/cli-plugin-unit-jest": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
