Swap localhost check for webpack proxy

--- a/package.json
+++ b/package.json
@@ -97,5 +97,13 @@
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "proxy": {
+    "/.netlify/functions": {
+      "target": "http://localhost:9000",
+      "pathRewrite": {
+        "^/\\.netlify/functions": ""
+      }
+    }
   }
 }
